# checkplus

./: Cargo.toml  Makefile  README.md
assets/: fetch.sh
scripts/: gamecheck
src/: board.rs  gui.rs  main.rs  pgn.rs  stockfish.rs
src/board/: display.rs  file.rs  index.rs  piece.rs  tests.rs
src/board/piece/: display.rs
src/pgn/: mov.rs  tests.rs
testfiles/: multi.pgn  multi.want  sample.want
