[package]
name = "checkplus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.4"
eframe = { version = "0.22.0", default-features = false, features = [ "glow" ] }
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = [ "svg" ] }
